@@ -72,6 +72,48 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|store
+operator|.
+name|NRTCachingDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RateLimitedDirectoryWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|TrackingDirectoryWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|util
 operator|.
 name|LuceneTestCase
@@ -114,9 +156,31 @@ operator|.
 name|newDirectory
 argument_list|()
 decl_stmt|;
+name|Directory
+name|cdir
+init|=
+name|reduce
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|cdir
+operator|=
+name|reduce
+argument_list|(
+name|cdir
+argument_list|)
+expr_stmt|;
+name|cdir
+operator|=
+name|reduce
+argument_list|(
+name|cdir
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
-name|dir
+name|cdir
 operator|instanceof
 name|MockDirectoryWrapper
 condition|)
@@ -127,7 +191,7 @@ init|=
 operator|(
 name|MockDirectoryWrapper
 operator|)
-name|dir
+name|cdir
 decl_stmt|;
 comment|// we can't currently do this check because of how
 comment|// Solr has to reboot a new Directory sometimes when replicating
@@ -164,6 +228,84 @@ expr_stmt|;
 block|}
 return|return
 name|dir
+return|;
+block|}
+DECL|method|reduce
+specifier|private
+name|Directory
+name|reduce
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|)
+block|{
+name|Directory
+name|cdir
+init|=
+name|dir
+decl_stmt|;
+if|if
+condition|(
+name|dir
+operator|instanceof
+name|NRTCachingDirectory
+condition|)
+block|{
+name|cdir
+operator|=
+operator|(
+operator|(
+name|NRTCachingDirectory
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|cdir
+operator|instanceof
+name|RateLimitedDirectoryWrapper
+condition|)
+block|{
+name|cdir
+operator|=
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|cdir
+operator|instanceof
+name|TrackingDirectoryWrapper
+condition|)
+block|{
+name|cdir
+operator|=
+operator|(
+operator|(
+name|TrackingDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|cdir
 return|;
 block|}
 annotation|@
