@@ -72,6 +72,48 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|store
+operator|.
+name|NRTCachingDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RateLimitedDirectoryWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|TrackingDirectoryWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|util
 operator|.
 name|LuceneTestCase
@@ -126,9 +168,31 @@ comment|// or rolling back - the old directory is closed and the following
 comment|// test assumes it can open an IndexWriter when that happens - we
 comment|// have a new Directory for the same dir and still an open IW at
 comment|// this point
+name|Directory
+name|cdir
+init|=
+name|reduce
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|cdir
+operator|=
+name|reduce
+argument_list|(
+name|cdir
+argument_list|)
+expr_stmt|;
+name|cdir
+operator|=
+name|reduce
+argument_list|(
+name|cdir
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
-name|dir
+name|cdir
 operator|instanceof
 name|MockDirectoryWrapper
 condition|)
@@ -137,10 +201,22 @@ operator|(
 operator|(
 name|MockDirectoryWrapper
 operator|)
-name|dir
+name|cdir
 operator|)
 operator|.
 name|setAssertNoUnrefencedFilesOnClose
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+operator|(
+operator|(
+name|MockDirectoryWrapper
+operator|)
+name|cdir
+operator|)
+operator|.
+name|setPreventDoubleWrite
 argument_list|(
 literal|false
 argument_list|)
@@ -172,6 +248,84 @@ argument_list|)
 operator|.
 name|isAbsolute
 argument_list|()
+return|;
+block|}
+DECL|method|reduce
+specifier|private
+name|Directory
+name|reduce
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|)
+block|{
+name|Directory
+name|cdir
+init|=
+name|dir
+decl_stmt|;
+if|if
+condition|(
+name|dir
+operator|instanceof
+name|NRTCachingDirectory
+condition|)
+block|{
+name|cdir
+operator|=
+operator|(
+operator|(
+name|NRTCachingDirectory
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|cdir
+operator|instanceof
+name|RateLimitedDirectoryWrapper
+condition|)
+block|{
+name|cdir
+operator|=
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|cdir
+operator|instanceof
+name|TrackingDirectoryWrapper
+condition|)
+block|{
+name|cdir
+operator|=
+operator|(
+operator|(
+name|TrackingDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|cdir
 return|;
 block|}
 block|}
